# diver

./: .gitignore  README.md  advanced_usage.md  diver.py  diver_loader.py  draw.py  index.html  index.js  js.pyi  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  style.css
.github/workflows/: static.yml
dev_server/: README.md  bak_pyproject.toml  serve.py
examples/: e_field.py  e_field2.py  helper_test.py  photosynthesis.py  proceso_test.py  processo_figure_8.py  processo_simple_shapes.py  rainbow.py  shapes.py  sound.py  soundp5js.py  squares.py  string.py
python/: pyproject.toml
python/diver/: diver.py
python/sketches/: mandlebrot.py  p5js.pyi  proceso_test.py
src/: basic.py  diver.py  diverComponent.js  draw.py  e_field.py  editor.js  editor.js.map  editor.ts  index.html  index.js  install_diver.py  pyodideManager.js  serve.py  squares.py  style.css  utils.js
src/editor/: editor.js  editor.js.map  editor.ts  syntax-test.py  theme-everforest.ts
src/sketches/: e_field.py  impossible_object.py  leaves.py  rainbow.py  sound.py  squares.py  string.py
src/test/: webcomponent.html
web/: .eslintrc.js  package-lock.json  package.json
web/src/: diverComponent.js  index.js  pyodideManager.js  style.css  utils.js
web/src/editor/: editor.ts  syntax-test.py  theme-everforest.ts
web/src/test/: webcomponent.html
