[tool.poetry]
name = "diver"
version = "0.1.0"
description = ""
authors = ["John Christensen <johnedchristensen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
mypy = "^1.6.1"
pyodide-py = "^0.24.1"
webtypy = "^0.1.6"
proceso = "^0.0.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

